assignments/2-debug-pod/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assignment2
  namespace: vetoki
  labels:
    app: assignment2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assignment2
  template:
    metadata:
      labels:
        app: assignment2
    spec:
      containers:
      - name: assignment2
        image: 289831833738.dkr.ecr.eu-north-1.amazonaws.com/assignment2/vetoki:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /live
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 15
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      volumes:
      - name: config-volume
        emptyDir: {}
