assignments/2-debug-pod/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assignment2-service
  namespace: vetoki
spec:
  selector:
    app: assignment2
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
